Feat index.html

--- a/index.html
+++ b/index.html
@@ -15,25 +15,42 @@
       <div class="auth-container">
         <div class="auth-box">
           <div class="login1">로그인</div>
-          <div class="regex">|</div>
+          <div class="regex">⎪</div>
           <div class="login2">회원가입</div>
-          <div class="regex">|</div>
+          <div class="regex">⎪</div>
           <div class="login3">기부금영수증</div>
-          <div class="regex">|</div>
+          <div class="regex">⎪</div>
           <div class="login4">FAQ</div>
-          <div class="regex">|</div>
+          <div class="regex">⎪</div>
           <div class="login5">나는검색창입니다.</div>
         </div>
       </div>
       <div class="nav-container">
-        <div class="menu1">menu1</div>
-        <div class="menu2">menu2</div>
-        <div class="menu3">menu3</div>
-        <div class="menu4">menu4</div>
-        <div class="menu5">menu5</div>
+        <div class="nav-box">
+          <div class="menu1">
+            <div class="img"></div>
+          </div>
+          <div class="menu2">소개</div>
+          <div class="menu3">후원과 참여</div>
+        </div>
       </div>
     </div>
-    <div id="main-container">main-container</div>
-    <div id="footer-container">footer-container</div>
+    <div id="main-container">
+      <div class="img1"></div>
+      <div class="img2"></div>
+      <div class="img3"></div>
+      <div class="img4"></div>
+      <div class="img5"></div>
+      <div class="img6"></div>
+      <div class="img7"></div>
+      <div class="img8"></div>
+      <div class="img9"></div>
+    </div>
+    <div id="footer-container">
+      <div class="copy-right">
+        © 2023 Sonkkot. All rights reserved.<br />
+        Designed with ❤️ by.sonkkot
+      </div>
+    </div>
   </body>
 </html>
